--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,9 @@ dependencies {
         exclude module: 'support-v4'
     }
     compile 'org.jsoup:jsoup:1.10.1'
- //   compile 'com.orhanobut:logger:1.15'
+    //   compile 'com.orhanobut:logger:1.15'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'org.greenrobot:eventbus:3.0.0'
+    compile files('libs/tbs_sdk_thirdapp_v2.6.0.1045_36900_sharewithdownload_obfs_20161207_162008.jar')
 }
